invSiteRegBox is now exactly what needs to be exposed and no more.

--- a/py3/panels/evolution/_nodeBase_/fullUsagePanel-en.org
+++ b/py3/panels/evolution/_nodeBase_/fullUsagePanel-en.org
@@ -43,6 +43,9 @@
 * +
 * TODO [#A] Complete box to equivalent of bash.
 DEADLINE: <2024-01-22 Mon> SCHEDULED: <2024-01-21 Sun>
+** TODO Create invSite.py and perfSite.py
+** TODO Create csSite.py and csInvSite.py
+** TODO Better menuItems library
 * TODO [#A] Use exsisting code to register new machines.
 SCHEDULED: <2024-01-21 Sun>
 * TODO [#A] Rebuild raw-bisos with siteRegistrars. Setup site registrars
